methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:20: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:37: error: Unmatched closing brace '}' ignored here
}
^